test/corpus/builtin_statements.txt
================================================================================
Builtin statement: cd
================================================================================

main {
    cd "/path/to/dir"
}

--------------------------------------------------------------------------------

(source_file
  (main_block
    (block
      (builtin_stmt
        (string
          (string_content))))))

================================================================================
Builtin statement: echo
================================================================================

main {
    echo "Hello, World!"
}

--------------------------------------------------------------------------------

(source_file
  (main_block
    (block
      (builtin_stmt
        (string
          (string_content))))))

================================================================================
Builtin statement: exit
================================================================================

main {
    exit 0
}

--------------------------------------------------------------------------------

(source_file
  (main_block
    (block
      (builtin_stmt
        (number)))))

================================================================================
Builtin statement: mv
================================================================================

main {
    mv "source.txt", "dest.txt"
}

--------------------------------------------------------------------------------

(source_file
  (main_block
    (block
      (mv_stmt
        (string
          (string_content))
        (string
          (string_content))))))
